--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="your-avatar.ico" type="image/x-icon">
     <title>The Cantina</title>
+    <link rel="icon" href="images/title-icon-avatar.ico"image/x-icon">
+    <link rel="stylesheet" href="index-stlyes/main.css">
 </head>
 <body>
     
