--- a/index.html
+++ b/index.html
@@ -8,6 +8,23 @@
     <link rel="stylesheet" href="index-stlyes/main.css">
 </head>
 <body>
+        <nav>
+            <div class="container">
+                <div class="menu-icon" id="menu-toggle">
+                    <span>&#9776;</span>
+                </div>    
+                <img src="images/The cantina logo.png" alt="">
+                <ul>
+                    <li><a href="#"><p>Home</p></a></li>
+                    <li><a href="#"><p>Certifications</p></a></li>
+                    <li><a href="#"><p>About</p></a></li>
+                    <li><a href="#"><p>Contacts</p></a></li>
+                </ul>
+            </div>
+        </nav>
     
 </body>
+<script src="scripts/dropdown-responsive-nav.js"></script>
+<script src="scripts/device-max-width-css.js"></script>
+
 </html>
