--- a/index.html
+++ b/index.html
@@ -8,21 +8,34 @@
     <link rel="stylesheet" href="index-stlyes/main.css">
 </head>
 <body>
-        <nav>
-            <div class="container">
-                <div class="menu-icon" id="menu-toggle">
-                    <span>&#9776;</span>
-                </div>    
-                <img src="images/The cantina logo.png" alt="">
-                <ul>
-                    <li><a href="#"><p>Home</p></a></li>
-                    <li><a href="#"><p>Certifications</p></a></li>
-                    <li><a href="#"><p>About</p></a></li>
-                    <li><a href="#"><p>Contacts</p></a></li>
-                </ul>
+    <nav>
+        <div class="container">
+            <div class="menu-icon" id="menu-toggle">
+                <h1>The Cantina</h1>
+                <span>&#9776;</span>
+            </div>    
+            <img src="images/The cantina logo.png" alt="">
+            <ul>
+                <li><a href="#"><p>Home</p></a></li>
+                <li><a href="#"><p>Certifications</p></a></li>
+                <li><a href="#"><p>About</p></a></li>
+                <li><a href="#"><p>Contacts</p></a></li>
+            </ul>
+        </div>
+    </nav>
+
+    <main>
+        <div class="container">
+            <div class="image-container">
+                <img src="images/image-banner.jpg" alt="">
             </div>
-        </nav>
-    
+            <div class="context">
+                <h1>Dimitur Kiuliumov</h1>
+                <h2>I am a software developer from Bulgaria</h2>
+            </div>
+        </div>
+    </main>
+
 </body>
 <script src="scripts/dropdown-responsive-nav.js"></script>
 <script src="scripts/device-max-width-css.js"></script>
