--- a/index.html
+++ b/index.html
@@ -31,10 +31,16 @@
             </div>
             <div class="context">
                 <h1>Dimitur Kiuliumov</h1>
-                <h2>I am a software developer from Bulgaria</h2>
+                <h2>I am a software developer from Bulgaria with passion for building apps</h2>
             </div>
         </div>
     </main>
+
+    <footer>
+        <div class="container">
+            <p>&copy; 2025 Dimitur Kiuliumov. All rights reserved.</p>
+        </div>
+    </footer>
 
 </body>
 <script src="scripts/dropdown-responsive-nav.js"></script>
