--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <img src="images/The cantina logo.png" alt="">
             <ul>
                 <li><a href="#"><p>Home</p></a></li>
-                <li><a href="#"><p>Certifications</p></a></li>
+                <li><a href="pages/certifications.html"><p>Certifications</p></a></li>
                 <li><a href="#"><p>About</p></a></li>
                 <li><a href="#"><p>Contacts</p></a></li>
             </ul>
@@ -27,15 +27,25 @@
     <main>
         <div class="container">
             <div class="image-container">
-                <img src="images/image-banner.jpg" alt="">
+                <img src="images/image-banner.jpg" alt="Dimitur Kiuliumov">
             </div>
             <div class="context">
                 <h1>Dimitur Kiuliumov</h1>
-                <h2>I am a software developer from Bulgaria with passion for building apps</h2>
-            </div>
+                <p>Hello! I'm a full-stack developer who loves creating clean, efficient, and user-friendly applications. I specialize in JavaScript, Python, and modern web frameworks.</p>
+    
+                <ul class="highlights">
+                    <li>🔧 Skilled in Django, Node.js, Express & ChatBot Development for Reddit / Telegram / Discord</li>
+                    <li>📱 Passionate about UI/UX and responsive design</li>
+                    <li>🚀 Always learning new tools and improving my craft</li>
+                </ul>
+    
+                <div class="buttons">
+                    <a href="https://github.com/Kiuliumov" class="btn">See My Work</a>
+                    <a href="https://discord.gg/UEjnQeAHYx" class="btn btn-secondary">Contact Me</a>
+                </div>
+            </div> 
         </div>
     </main>
-
     <footer>
         <div class="container">
             <p>&copy; 2025 Dimitur Kiuliumov. All rights reserved.</p>
