--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             <ul>
                 <li><a href="#"><p>Home</p></a></li>
                 <li><a href="pages/certifications.html"><p>Certifications</p></a></li>
-                <li><a href="#"><p>About</p></a></li>
-                <li><a href="#"><p>Contacts</p></a></li>
+                <li><a href="pages/about.html"><p>About</p></a></li>
+                <li><a href="pages/contacts.html"><p>Contacts</p></a></li>
             </ul>
         </div>
     </nav>
