--- a/pages/certifications.html
+++ b/pages/certifications.html
@@ -19,8 +19,8 @@
             <ul>
                 <li><a href="../index.html"><p>Home</p></a></li>
                 <li><a href="#"><p>Certifications</p></a></li>
-                <li><a href="#"><p>About</p></a></li>
-                <li><a href="../pages/contacts.html"><p>Contacts</p></a></li>
+                <li><a href="about.html"><p>About</p></a></li>
+                <li><a href="contacts.html"><p>Contacts</p></a></li>
             </ul>
         </div>
     </nav>
