--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -18,9 +18,9 @@
             <img src="../images/The cantina logo.png" alt="">
             <ul>
                 <li><a href="../index.html"><p>Home</p></a></li>
-                <li><a href="#"><p>Certifications</p></a></li>
-                <li><a href="#"><p>About</p></a></li>
-                <li><a href="#"><p>Contacts</p></a></li>
+                <li><a href="certifications.html"><p>Certifications</p></a></li>
+                <li><a href="about.html"><p>About</p></a></li>
+                <li><a href="contacts.html"><p>Contacts</p></a></li>
             </ul>
         </div>
     </nav>
