--- a/pages/about.html
+++ b/pages/about.html
@@ -53,5 +53,7 @@
         </div>
     </footer>
     <script src="script.js"></script>
+    <script src="../scripts/dropdown-responsive-nav.js"></script>
+    <script src="../scripts/device-max-width-css.js"></script>
 </body>
 </html>
