--- a/index.html
+++ b/index.html
@@ -5,21 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Cantina</title>
     <link rel="icon" href="images/title-icon-avatar.ico"image/x-icon">
-    <link rel="stylesheet" href="index-stlyes/main.css">
+    <link rel="stylesheet" href="index-stlyes/banner.css">
+    <link rel="stylesheet" href="common-styles/common-styles-main.css">
 </head>
 <body>
     <nav>
         <div class="container">
             <div class="menu-icon" id="menu-toggle">
-                <h1>The Cantina</h1>
                 <span>&#9776;</span>
+                <h1>The Cantina</h1>
             </div>    
             <img src="images/The cantina logo.png" alt="">
             <ul>
                 <li><a href="#"><p>Home</p></a></li>
-                <li><a href="pages/certifications.html"><p>Certifications</p></a></li>
-                <li><a href="pages/about.html"><p>About</p></a></li>
-                <li><a href="pages/contacts.html"><p>Contacts</p></a></li>
+                <li><a href="pages/certifications-page/certifications.html"><p>Certifications</p></a></li>
+                <li><a href="pages/about-page/about.html"><p>About</p></a></li>
+                <li><a href="pages/contact-page/contacts.html"><p>Contacts</p></a></li>
             </ul>
         </div>
     </nav>
