--- a/pages/about-page/about.html
+++ b/pages/about-page/about.html
@@ -6,27 +6,28 @@
     <title>The Cantina</title>
     <link rel="icon" href="../images/title-icon-avatar.ico"image/x-icon">
     <link rel="stylesheet" href="about-styles.css">
+    <link rel="stylesheet" href="../../common-styles/common-styles-main.css">
 </head>
 <body>
     <nav>
         <div class="container">
             <div class="menu-icon" id="menu-toggle">
-                <h1>The Cantina</h1>
                 <span>&#9776;</span>
+                <h1>The Cantina</h1>
             </div>    
-            <img src="../images/The cantina logo.png" alt="">
+            <img src="../../images/The cantina logo.png" alt="">
             <ul>
-                <li><a href="../index.html"><p>Home</p></a></li>
-                <li><a href="certifications.html"><p>Certifications</p></a></li>
+                <li><a href="../../index.html"><p>Home</p></a></li>
+                <li><a href="../certifications-page/certifications.html"><p>Certifications</p></a></li>
                 <li><a href="#"><p>About</p></a></li>
-                <li><a href="contacts.html"><p>Contacts</p></a></li>
+                <li><a href="../contact-page/contacts.html"><p>Contacts</p></a></li>
             </ul>
         </div>
     </nav>
     <main>
         <div class="container">
             <div class="image-container">
-                <img src="../images/cantina.png" alt="">
+                <img src="../../images/cantina.png" alt="">
             </div>
             <div class="context">
                 <h1>About us</h1>
@@ -53,7 +54,7 @@
         </div>
     </footer>
     <script src="script.js"></script>
-    <script src="../scripts/dropdown-responsive-nav.js"></script>
-    <script src="../scripts/device-max-width-css.js"></script>
+    <script src="../../scripts/dropdown-responsive-nav.js"></script>
+    <script src="../../scripts/device-max-width-css.js"></script>
 </body>
 </html>
