--- a/pages/contact-page/contacts.html
+++ b/pages/contact-page/contacts.html
@@ -6,21 +6,23 @@
     <title>The Cantina</title>
     <link rel="icon" href="../images/title-icon-avatar.ico"image/x-icon">
     <link rel="stylesheet" href="conatcts-styles.css">
+    <link rel="stylesheet" href="../../common-styles/common-styles-main.css">
 
 </head>
 <body>
+
     <nav>
         <div class="container">
             <div class="menu-icon" id="menu-toggle">
                 <h1>The Cantina</h1>
                 <span>&#9776;</span>
             </div>    
-            <img src="../images/The cantina logo.png" alt="">
+            <img src="../../images/The cantina logo.png" alt="">
             <ul>
-                <li><a href="../index.html"><p>Home</p></a></li>
-                <li><a href="certifications.html"><p>Certifications</p></a></li>
-                <li><a href="about.html"><p>About</p></a></li>
-                <li><a href="contacts.html"><p>Contacts</p></a></li>
+                <li><a href="../../index.html"><p>Home</p></a></li>
+                <li><a href="../certifications-page/certifications.html"><p>Certifications</p></a></li>
+                <li><a href="../about-page/about.html"><p>About</p></a></li>
+                <li><a href="#"><p>Contacts</p></a></li>
             </ul>
         </div>
     </nav>
@@ -28,7 +30,7 @@
     <main>
         <section class="contact-section">
             <h2>Contact Us</h2>
-            <form class="contact-form">
+            <form class="contact-form" action="mailto:ikiuliumov@gmail.com" method="post" enctype="text/plain">
                 <label for="name">Name</label>
                 <input type="text" id="name" name="name" placeholder="Your name..." required>
     
@@ -42,13 +44,14 @@
             </form>
         </section>
     </main>
+
     <footer>
         <div class="container">
             <p>&copy; 2025 Dimitur Kiuliumov. All rights reserved.</p>
         </div>
     </footer>
     <script src="script.js"></script>
-    <script src="../scripts/dropdown-responsive-nav.js"></script>
-    <script src="../scripts/device-max-width-css.js"></script>
+    <script src="../../scripts/dropdown-responsive-nav.js"></script>
+    <script src="../../scripts/device-max-width-css.js"></script>
 </body>
 </html>
