--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
             </div>
             <div class="context">
                 <h1>Dimitur Kiuliumov</h1>
-                <p>Hello! I'm a full-stack developer who loves creating clean, efficient, and user-friendly applications. I specialize in JavaScript, Python, and modern web frameworks.</p>
-    
+                <p>Hello! I'm a full-stack developer from Bulgaria with a strong passion for programming and mathematics. After graduating from high school, I will go after a degree in Computer Science at the <a href="https://fpmi.bg/cms/informatics/" style="text-decoration: underline; color: rgb(26, 26, 145);">Technical University of Sofia</a>.</p>                
                 <ul class="highlights">
                     <li>🔧 Skilled in Django, Node.js, Express & ChatBot Development for Reddit / Telegram / Discord</li>
                     <li>📱 Passionate about UI/UX and responsive design</li>
