--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 <li><a href="pages/certifications-page/certifications.html"><p>Certifications</p></a></li>
                 <li><a href="pages/about-page/about.html"><p>About</p></a></li>
                 <li><a href="pages/contact-page/contacts.html"><p>Contacts</p></a></li>
+                <li><a href="pages/projects-page/project.html"><p>Projects</p></a></li>
             </ul>
         </div>
     </nav>
