--- a/pages/about-page/about.html
+++ b/pages/about-page/about.html
@@ -21,6 +21,7 @@
                 <li><a href="../certifications-page/certifications.html"><p>Certifications</p></a></li>
                 <li><a href="#"><p>About</p></a></li>
                 <li><a href="../contact-page/contacts.html"><p>Contacts</p></a></li>
+                <li><a href="../projects-page/project.html"><p>Projects</p></a></li>
             </ul>
         </div>
     </nav>
@@ -58,3 +59,4 @@
     <script src="../../scripts/device-max-width-css.js"></script>
 </body>
 </html>
+
