--- a/pages/certifications-page/certifications.html
+++ b/pages/certifications-page/certifications.html
@@ -22,6 +22,7 @@
                 <li><a href="#"><p>Certifications</p></a></li>
                 <li><a href="../about-page/about.html"><p>About</p></a></li>
                 <li><a href="../contact-page/contacts.html"><p>Contacts</p></a></li>
+                <li><a href="../projects-page/project.html"><p>Projects</p></a></li>
             </ul>
         </div>
     </nav>
