--- a/pages/contact-page/contacts.html
+++ b/pages/contact-page/contacts.html
@@ -23,6 +23,7 @@
                 <li><a href="../certifications-page/certifications.html"><p>Certifications</p></a></li>
                 <li><a href="../about-page/about.html"><p>About</p></a></li>
                 <li><a href="#"><p>Contacts</p></a></li>
+                <li><a href="../projects-page/project.html"><p>Projects</p></a></li>
             </ul>
         </div>
     </nav>
