--- a/pages/certifications-page/certifications.html
+++ b/pages/certifications-page/certifications.html
@@ -10,6 +10,7 @@
 
 </head>
 <body>
+    <div class="page-wrapper">
     <nav>
         <div class="container">
             <div class="menu-icon" id="menu-toggle">
@@ -49,6 +50,7 @@
             <p>&copy; 2025 Dimitur Kiuliumov. All rights reserved.</p>
         </div>
     </footer>
+    </div>
     <script src="script.js"></script>
     <script src="../../scripts/dropdown-responsive-nav.js"></script>
     <script src="../../scripts/device-max-width-css.js"></script>
