--- a/pages/projects-page/project.html
+++ b/pages/projects-page/project.html
@@ -55,6 +55,12 @@
                     <p>The site you're browsing! Built with clean HTML, CSS, and JavaScript to showcase my skills and projects.</p>
                     <a href="../../index.html" class="btn">Learn More</a>
                 </div>
+                <div class="project-card">
+                    <img src="../../images/crypto.jpg" alt="Portfolio Icon">
+                    <h3>Crypto World</h3>
+                    <p>A discord bot that uses different apis for crypto news!</p>
+                    <a href="https://github.com/Kiuliumov/CryptoWorld" class="btn">Learn More</a>
+                </div>
             </div>
         </section>
     </main>
