--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="images/title-icon-avatar.ico"image/x-icon">
     <link rel="stylesheet" href="index-stlyes/banner.css">
     <link rel="stylesheet" href="common-styles/common-styles-main.css">
+    <meta property="og:image" content="images/The cantina logo.png" />
 </head>
 <body>
     <nav>
@@ -21,6 +22,7 @@
                 <li><a href="pages/certifications-page/certifications.html"><p>Certifications</p></a></li>
                 <li><a href="pages/about-page/about.html"><p>About</p></a></li>
                 <li><a href="pages/contact-page/contacts.html"><p>Contacts</p></a></li>
+                <li><a href="pages/projects-page/project.html"><p>Projects</p></a></li>
                 <li><a href="pages/projects-page/project.html"><p>Projects</p></a></li>
             </ul>
         </div>
