--- a/pages/projects-page/project.html
+++ b/pages/projects-page/project.html
@@ -61,6 +61,12 @@
                     <p>A discord bot that uses different apis for crypto news!</p>
                     <a href="https://github.com/Kiuliumov/CryptoWorld" class="btn">Learn More</a>
                 </div>
+                <div class="project-card">
+                    <img src="../../images/qr.png" alt="Portfolio Icon">
+                    <h3>National hero</h3>
+                    <p>A school project that works with qr code scanning.</p>
+                    <a href="https://github.com/Kiuliumov/nationalHero" class="btn">Learn More</a>
+                </div>
             </div>
         </section>
     </main>
