--- a/pages/projects-page/project.html
+++ b/pages/projects-page/project.html
@@ -23,6 +23,7 @@
                 <li><a href="../about-page/about.html"><p>About</p></a></li>
                 <li><a href="../contact-page/contacts.html"><p>Contacts</p></a></li>
                 <li><a href="#"><p>Projects</p></a></li>
+                <li><a href="../reviews-page/reviews.html"><p>Reviewes</p></a></li>
             </ul>
         </div>
     </nav>
