--- a/pages/about-page/about.html
+++ b/pages/about-page/about.html
@@ -22,6 +22,7 @@
                 <li><a href="#"><p>About</p></a></li>
                 <li><a href="../contact-page/contacts.html"><p>Contacts</p></a></li>
                 <li><a href="../projects-page/project.html"><p>Projects</p></a></li>
+                <li><a href="../reviews-page/reviews.html"><p>Reviewes</p></a></li>
             </ul>
         </div>
     </nav>
