--- a/pages/contact-page/contacts.html
+++ b/pages/contact-page/contacts.html
@@ -24,6 +24,7 @@
                 <li><a href="../about-page/about.html"><p>About</p></a></li>
                 <li><a href="#"><p>Contacts</p></a></li>
                 <li><a href="../projects-page/project.html"><p>Projects</p></a></li>
+                <li><a href="../reviews-page/reviews.html"><p>Reviewes</p></a></li>
             </ul>
         </div>
     </nav>
