--- a/pages/about-page/about.html
+++ b/pages/about-page/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Cantina</title>
-    <link rel="icon" href="../images/title-icon-avatar.ico"image/x-icon">
+    <link rel="icon" href="../../images/title-icon-avatar.ico"image/x-icon">
     <link rel="stylesheet" href="about-styles.css">
     <link rel="stylesheet" href="../../common-styles/common-styles-main.css">
 </head>
