--- a/pages/reviews-page/reviews.html
+++ b/pages/reviews-page/reviews.html
@@ -7,9 +7,6 @@
     <link rel="icon" href="../../images/title-icon-avatar.ico"image/x-icon">
     <link rel="stylesheet" href="../../common-styles/common-styles-main.css">
     <link rel="stylesheet" href="reviews-styles.css">
-    <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore-compat.js"></script>
-
 </head>
 <body>
     <nav>
@@ -29,37 +26,49 @@
             </ul>
         </div>
     </nav>
-    <main>
-    <section class="review-form-section">
+        <main>
+    <div class="content-container">
+        <section class="review-form-section">
         <h2>Write a Review</h2>
         <form id="reviewForm">
-        <label for="name">Your Name:</label><br>
-        <input type="text" id="name" name="name" required><br><br>
+            <label for="name">Your Name:</label><br>
+            <input type="text" id="name" name="name" required><br><br>
 
-        <label for="rating">Rating (1 to 5):</label><br>
-        <select id="rating" name="rating" required>
+            <label for="rating">Rating (1 to 5):</label><br>
+            <select id="rating" name="rating" required>
             <option value="">Select rating</option>
             <option value="1">1 - Poor</option>
             <option value="2">2 - Fair</option>
             <option value="3">3 - Good</option>
             <option value="4">4 - Very Good</option>
             <option value="5">5 - Excellent</option>
-        </select><br><br>
+            </select><br><br>
 
-        <label for="comment">Your Review:</label><br>
-        <textarea id="comment" name="comment" rows="5" required></textarea><br><br>
+            <label for="comment">Your Review:</label><br>
+            <textarea id="comment" name="comment" rows="5" required></textarea><br><br>
 
-        <button type="submit">Submit Review</button>
+            <button type="submit">Submit Review</button>
         </form>
         <div id="formMessage"></div>
-    </section>
+        </section>
 
-    <section class="reviews-section">
+        <section class="reviews-section">
         <h2>Customer Reviews</h2>
+        <div class="sort-controls" style="text-align:center; margin-bottom: 1rem;">
+            <label for="sortSelect" style="color:#99d6c4; font-weight:600;">Sort by: </label>
+            <select id="sortSelect">
+            <option value="date-desc">Date: Newest first</option>
+            <option value="date-asc">Date: Oldest first</option>
+            <option value="rating-desc">Rating: High to Low</option>
+            <option value="rating-asc">Rating: Low to High</option>
+            </select>
+        </div>
         <div id="reviewsContainer"></div>
-    </section>
+        </section>
+    </div>
     </main>
-    </main>
+
+
     <footer>
         <div class="container">
             <p>&copy; 2025 Dimitur Kiuliumov. All rights reserved.</p>
