--- a/pages/projects-page/project.html
+++ b/pages/projects-page/project.html
@@ -33,13 +33,13 @@
             <h2>My Projects</h2>
             <div class="projects-grid">
                 <div class="project-card">
-                    <img src="../../images/gdbot.png" alt="Bot Icon">
+                    <img src="../../images/gd.png" alt="Bot Icon">
                     <h3>GDBOT</h3>
                     <p>GD Bot is a discord application built with the help of the gd.py api wrapper.It is designed to enhance your Geometry Dash experience within Discord by providing various features.</p>
                     <a href="https://github.com/Kiuliumov/GDBOT" class="btn">Learn More</a>
                 </div>
                 <div class="project-card">
-                    <img src="../../images/casino.png" alt="Dashboard Icon">
+                    <img src="../../images/casino-logo.jpg" alt="Dashboard Icon">
                     <h3>🎰 Casino Bot</h3>
                     <p>A fun and feature-rich Discord casino bot where users can enjoy classic games like Blackjack, Slot Machine, Roulette, Coinflip, and more! </p>
                     <a href="https://github.com/Kiuliumov/CasinoBot" class="btn">Learn More</a>
@@ -63,7 +63,7 @@
                     <a href="https://github.com/Kiuliumov/CryptoWorld" class="btn">Learn More</a>
                 </div>
                 <div class="project-card">
-                    <img src="../../images/qr.png" alt="Portfolio Icon">
+                    <img src="../../images/qr-code.jpg" alt="Portfolio Icon">
                     <h3>National hero</h3>
                     <p>A school project that works with qr code scanning.</p>
                     <a href="https://github.com/Kiuliumov/nationalHero" class="btn">Learn More</a>
