Cantina Website update

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="images/title-icon-avatar.ico"image/x-icon">
     <link rel="stylesheet" href="index-stlyes/banner.css">
     <link rel="stylesheet" href="common-styles/common-styles-main.css">
+    <link href="https://api.fontshare.com/v2/css?f[]=satoshi@400,700&display=swap" rel="stylesheet">
     <meta property="og:image" content="images/The cantina logo.png" />
 </head>
 <body>
@@ -35,7 +36,7 @@
             </div>
             <div class="context">
                 <h1>Dimitur Kiuliumov</h1>
-                <p>Hello! I'm a full-stack developer from Bulgaria with a strong passion for programming and mathematics. After graduating from high school, I will go after a degree in Computer Science at the <a href="https://fpmi.bg/cms/informatics/" style="text-decoration: underline; color: rgb(26, 26, 145);">Technical University of Sofia</a>.</p>                
+                <p>Hello! I'm a full-stack developer from Bulgaria with a strong passion for programming and mathematics. After graduating from high school, I will go after a degree in Computer Science at the <a href="https://fpmi.bg/cms/informatics/" style="text-decoration: none; color: rgb(219, 133, 133);">Technical University of Sofia</a>.</p>                
                 <ul class="highlights">
                     <li>🔧 Skilled in Django, Node.js, Express & ChatBot Development for Reddit / Telegram / Discord</li>
                     <li>📱 Passionate about UI/UX and responsive design</li>
