--- a/pages/certifications-page/certifications.html
+++ b/pages/certifications-page/certifications.html
@@ -37,17 +37,21 @@
                 <img src="../../images/programming-cert3.png" alt="">
                 <img src="../../images/programming-cert4.png" alt="">
                 <img src="../../images/programming-cert5.png" alt="">
+                <img src="../../images/orm-certificate.png" alt="">
+
+
 
                 <img src="../../images/programming-cert.png" alt="">
                 <img src="../../images/programming-cert2.png" alt="">
                 <img src="../../images/programming-cert3.png" alt="">
                 <img src="../../images/programming-cert4.png" alt="">
                 <img src="../../images/programming-cert5.png" alt="">
+                <img src="../../images/orm-certificate.png" alt="">
+
             </div>
         </section>
     </main>
     <footer>
-        <div class="container">
             <p>&copy; 2025 Dimitur Kiuliumov. All rights reserved.</p>
         </div>
     </footer>
