--- a/pages/certifications-page/certifications.html
+++ b/pages/certifications-page/certifications.html
@@ -38,6 +38,7 @@
                 <img src="../../images/programming-cert4.png" alt="">
                 <img src="../../images/programming-cert5.png" alt="">
                 <img src="../../images/orm-certificate.png" alt="">
+                <img src="../../images/django.png" alt="">
 
 
 
@@ -47,7 +48,7 @@
                 <img src="../../images/programming-cert4.png" alt="">
                 <img src="../../images/programming-cert5.png" alt="">
                 <img src="../../images/orm-certificate.png" alt="">
-
+                <img src="../../images/django.png" alt="">
             </div>
         </section>
     </main>
